Test Element Change
Now testing a span and a table cell, instead of a button.

--- a/test/ninja-menu.html
+++ b/test/ninja-menu.html
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th>&lt;span&gt;</th>
-      <th>&lt;button&gt;</th>
+      <th>&lt;td&gt;</th>
     </tr>
   </thead>
   <tbody>
@@ -16,8 +16,8 @@
           <option><a href="#c">c</a></option>
         </datalist>
       </td>
-      <td>
-        <button class="nui-tst-menu" list="menulist2">Menu</button>
+      <td class="nui-tst-menu" list="menulist2">
+        Menu
         <datalist id="menulist2">
           <option><a href="#one">one</a></option>
           <option><hr/></option>
