Theme and Select State
Removes opinionated styles that are now within the default theme of the core module.

Adds select state to clicked menu element.

Version bump.

--- a/test/ninja-menu.html
+++ b/test/ninja-menu.html
@@ -1,29 +1,13 @@
-<table class="nui-tbl">
+<table class="ninja">
   <thead>
     <tr>
       <th>&lt;span&gt;</th>
-      <th>&lt;td&gt;</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <td>
-        <span class="nui-tst-menu" list="menulist1">Menu</span>
-        <datalist id="menulist1">
-          <option><a href="#a">a</a></option>
-          <option><hr/></option>
-          <option><a href="#b">b</a></option>
-          <option><a href="#c">c</a></option>
-        </datalist>
-      </td>
-      <td class="nui-tst-menu" list="menulist2">
-        Menu
-        <datalist id="menulist2">
-          <option><a href="#one">one</a></option>
-          <option><hr/></option>
-          <option><a href="#two">two</a></option>
-          <option><a href="#three">three</a></option>
-        </datalist>
+        <span class="test-span">Menu Span</span>
       </td>
     </tr>
   </tbody>
